# college-yield-prediction

./: .gitignore  DEPLOY_TO_GCP.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: data.yaml
notebooks/: notebook.ipynb
src/: predict.py  train.py
